coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__suggestion_popup__tests__suggestion_popup_long_desc.snap
---
source: app/tui/src/widgets/suggestion_popup.test.rs
expression: "render_popup(&items, 0, 60, 4)"
---
                                                            
                                                            
                                                            
▸ /add-dir  <path> Mount an extra working directory
